# memex

./: .gitignore  20260603-tars-hook-analysis.md  Cargo.toml  LICENSE  README.en.md  README.md  SKILL.md  deny.toml  userinput.py
app/: Cargo.toml
app/Casks/: memex.rb
app/crates/memex-cli/: Cargo.toml
app/crates/memex-cli/src/: client.rs  io.rs  main.rs
app/crates/memex-cli/src/commands/: daemon.rs  ingest.rs  mod.rs  session.rs  sessions.rs  stats.rs
app/crates/memex-core/src/: lib.rs  locale.rs  maintenance.rs
app/crates/memex-core/src/clock/: mod.rs
app/crates/memex-core/src/collector/: continue_dev.rs  mod.rs
app/crates/memex-core/src/config/: io.rs
app/crates/memex-core/src/ingest/: mod.rs  project_summaries.rs
app/crates/memex-core/src/llm/: mod.rs  openai_compat.rs  reflect.rs
app/crates/memex-core/src/processor/: chunk.rs  metadata.rs  privacy.rs  redact.rs
app/crates/memex-core/src/retriever/: tests.rs
app/crates/memex-core/src/storage/: json_contract_tests.rs  mod.rs
app/crates/memex-core/tests/: rebuild_e2e.rs
app/desktop/: package-lock.json  package.json  vite.config.ts
app/desktop/scripts/: prepare-sidecars.mjs
app/desktop/src/: App.vue  main.ts  style.css
app/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: lib.rs
app/desktop/src-tauri/src/commands/: cli_path.rs  config.rs  daemon.rs  doctor.rs  llm_test.rs  maintenance.rs  mcp_activity.rs  mod.rs  reflect.rs  reports.rs  search.rs  sessions.rs  stats.rs  window.rs
app/desktop/src-tauri/src/services/: mod.rs  vibrancy.rs
app/desktop/src-tauri/tests/: ipc_contract.rs  window_config.rs
app/desktop/src/components/: MessageContent.vue  ToolCallBlock.vue
app/desktop/src/components/shell/: AppSidebar.vue  CommandPalette.vue  NotificationBell.vue  OllamaSetupDialog.vue  SiteHeader.vue
app/desktop/src/composables/: useCommandPalette.test.ts  useMemex.ts  useScanState.test.ts  useSurface.ts
app/desktop/src/i18n/: en.ts  index.ts  messages.ts  types.ts  zh.ts
app/desktop/src/lib/: toast-error.ts  utils.ts
app/desktop/src/router/: index.ts  router.test.ts
app/desktop/src/stores/: memex.ts
app/desktop/src/types/: index.ts
app/desktop/src/views/connect/: index.vue
app/desktop/src/views/insights/: index.vue
app/desktop/src/views/logs/: index.vue
app/desktop/src/views/settings/: index.vue  types.ts
app/desktop/src/views/today/: index.vue
app/desktop/src/views/tray-popup/: index.vue
app/skills/codex/: SKILL.md
crates/memex-cli/: Cargo.toml
crates/memex-cli/src/: cli.rs  client.rs  dispatch.rs  io.rs  main.rs
crates/memex-cli/src/commands/: backup.rs  config.rs  context.rs  credentials.rs  daemon.rs  daemon_client.rs  doctor.rs  hooks.rs  ingest.rs  mcp.rs  mod.rs  rebuild.rs  reflect.rs  restore.rs  rules.rs  search.rs  session.rs  sessions.rs  setup.rs  skill.rs  stats.rs
crates/memex-cli/src/commands/hooks/: claude.rs  codex.rs  cursor.rs  json_helpers.rs  mod.rs  tests.rs  wrapper.rs
crates/memex-cli/src/commands/mcp/: client.rs  protocol.rs
crates/memex-cli/src/commands/setup/: codex_backend.rs  io.rs  json_backends.rs  mod.rs
crates/memex-core/: Cargo.toml
crates/memex-core/src/: ingest.rs  lib.rs  maintenance.rs  reflect.rs
crates/memex-core/src/collector/: aider.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  cursor.rs  mod.rs  opencode.rs
crates/memex-core/src/collector/aider/: mod.rs  parser.rs  tests.rs
crates/memex-core/src/collector/claude_code/: mod.rs  parser.rs  tests.rs
crates/memex-core/src/collector/cline/: tests.rs
crates/memex-core/src/collector/codex/: discover.rs  mod.rs  parser.rs  tests.rs
crates/memex-core/src/collector/cursor/: jsonl.rs  mod.rs  sqlite.rs  tests.rs
crates/memex-core/src/collector/opencode/: mod.rs
crates/memex-core/src/config/: mod.rs  tests.rs  types.rs
crates/memex-core/src/context/: builder.rs  matcher.rs  mod.rs
crates/memex-core/src/context/builder/: collect.rs  mod.rs  render.rs
crates/memex-core/src/context/matcher/: mod.rs  tests.rs
crates/memex-core/src/ingest/: adapter.rs  period.rs  project_summaries.rs  reports.rs  summarize_levels.rs  threads.rs
crates/memex-core/src/ingest/adapter/: tests.rs
crates/memex-core/src/llm/: anthropic.rs  credentials.rs  mod.rs  ollama.rs  openai_compat.rs  provider.rs  reflect.rs  summarize.rs  threads.rs
crates/memex-core/src/llm/openai_compat/: tests.rs
crates/memex-core/src/llm/summarize/: mod.rs  parse.rs  period.rs  prompts.rs  tests.rs
crates/memex-core/src/llm/threads/: cluster.rs  mod.rs  (+4 more)
crates/memex-core/src/mcp/: mod.rs  protocol.rs  server.rs  tests.rs
crates/memex-core/src/processor/: chunk.rs  metadata.rs  mod.rs  privacy.rs  redact.rs
crates/memex-core/src/retriever/: mod.rs  tests.rs
crates/memex-core/src/storage/: db.rs  json_contract_tests.rs  markdown.rs  mcp_call_log.rs  metrics.rs  mod.rs  models.rs  notifications.rs  queries.rs  rebuild.rs
crates/memex-core/tests/: rebuild_e2e.rs
crates/memex-daemon/: Cargo.toml
crates/memex-daemon/src/: launchd.rs  lib.rs  lockfile.rs  logging.rs  main.rs  routes.rs  tests.rs  watcher.rs  web.rs
crates/memex-mcp/: Cargo.toml
crates/memex-mcp/src/: client.rs  lib.rs  protocol.rs  tests.rs
crates/memex-mcp/src/server/: dispatch.rs  mod.rs  tools.rs  transport.rs
tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs  tray.rs
tauri-app/src-tauri/src/commands/: backup.rs  cli_path.rs  config.rs  daemon.rs  doctor.rs  error.rs  hooks.rs  ide_integration.rs  ingest.rs  llm_providers.rs  llm_test.rs  logs.rs  maintenance.rs  mcp_activity.rs  mod.rs  notifications.rs  reflect.rs  reports.rs  search.rs  sessions.rs  stats.rs  threads.rs  update.rs  updater.rs
tauri-app/src-tauri/src/services/: daemon.rs  mod.rs
tauri-app/src-tauri/tests/: ipc_contract.rs  window_config.rs
(+389 files in other folders)
