[workspace]
members = ["crates/memex-core", "crates/memex-cli", "crates/memex-daemon", "tauri-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = ["Terrell She"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
blake3 = "1"
toml = "0.8"
walkdir = "2"
