[package]
name = "memex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "memex"
path = "src/main.rs"

[dependencies]
memex-core = { path = "../memex-core", version = "0.3" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
chrono.workspace = true
walkdir.workspace = true
flate2 = "1"
tar = "0.4"
dirs = "6"
libc = "0.2"
ureq = "3"

[dev-dependencies]
tempfile = "3"
