[package]
name = "memex-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true
blake3.workspace = true
toml.workspace = true
walkdir.workspace = true
dirs = "6"
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = "3"
