[package]
name = "memex-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Phase 4 起 daemon 不再有独立 binary：被 Tauri 主进程通过
# `memex_daemon::run_in_process(...)` 折叠成 in-process tokio task。
# 旧的 `src/main.rs` 已删；`[[bin]]` 段一并去掉。
# crate 仍以 lib 形态存在（`tauri-app/src-tauri` 通过 path 依赖），Phase 6 才会
# 物理解散并把源码挪进 `tauri-app/src-tauri/src/services/daemon/`。

[dependencies]
memex-core = { path = "../memex-core", version = "0.3" }
axum = "0.8"
tokio.workspace = true
notify = { version = "7", features = ["macos_kqueue"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
blake3.workspace = true
dirs = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
