[package]
name = "memex-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
memex-core = { path = "../memex-core", version = "0.3" }

[dev-dependencies]
tempfile = "3"
blake3.workspace = true
