[package]
name = "memex-menubar"
version = "0.1.0"
description = "Memex menubar — local-first cross-LLM session memory"
authors = ["Terrell She"]
edition = "2024"

[lib]
name = "memex_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
memex-core = { path = "../../crates/memex-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
toml = "0.8"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
url = "2"
tauri-plugin-updater = "2.10.1"
