[package]
name = "memex-menubar"
version.workspace = true
description = "Memex menubar — local-first cross-LLM session memory"
authors = ["Terrell She"]
edition = "2024"
rust-version = "1.95"
license.workspace = true

[lib]
name = "memex_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 显式让二进制名 = `Memex`（而非默认的 `memex-menubar`）。这样 macOS bundle
# 里 `Contents/MacOS/Memex` 会成为 CFBundleExecutable，消除 macOS Menu Bar
# 设置面板里 `memex-menubar` 这条 fallback 显示（详见 design 文档 menu-bar 节）。
# `cargo run -p memex-menubar` 仍然可用 —— crate name 不变，只是 bin name 不同。
[[bin]]
name = "Memex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
memex-core = { path = "../../crates/memex-core", version = "0.3" }
memex-daemon = { path = "../../crates/memex-daemon", version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
toml = "0.8"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
url = "2"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
